# sota-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/sota-agent/: SKILL.md  sota-agent.skill
.agents/skills/sota-agent/references/: agent-lifecycle.md  capabilities.md  debugging.md  error-handling.md  job-lifecycle.md  quickstart.md  sdk-reference.md  solana-contracts.md
.agents/skills/sota-agent/scripts/: preflight.py
src/sota_sdk/: __init__.py  agent.py  auth.py  cli.py  cli_context.py  cli_output.py  client.py  errors.py  logger.py  models.py  realtime.py
src/sota_sdk/cli_commands/: __init__.py  agent.py  identity.py  jobs_bids.py  keys.py  reputation_diag.py  runtime.py  sandbox.py  webhook.py
src/sota_sdk/templates/: .env.example.tpl  .gitignore.tpl  Dockerfile.tpl  README.md.tpl  agent.py.tpl  docker-compose.yml.tpl  requirements.txt.tpl
tests/: conftest.py  test_agent.py  test_auth_shutdown.py  test_cli.py  test_cli_commands_agent.py  test_cli_commands_identity.py  test_cli_commands_jobs_bids.py  test_cli_commands_keys.py  test_cli_commands_reputation_diag.py  test_cli_commands_runtime.py  test_cli_commands_sandbox.py  test_cli_commands_webhook.py  test_cli_context.py  test_cli_help_snapshots.py  test_cli_json_parity.py  test_cli_output.py  test_client.py  test_handler_error_policy.py  test_logger.py  test_realtime_fatal.py  test_sandbox_mode.py  test_sandbox_verdict.py
tests/golden/cli_json/: README.md  activity_log.expected.ndjson  activity_log.fixture.json  agent_list.fixture.json  bids_list.expected.json  keys_list.expected.json
