[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sota-sdk"
version = "0.1.0"
description = "SOTA Agent SDK - Build AI agents for the SOTA marketplace"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "supabase>=2.24.0",
]

[project.urls]
Homepage = "https://github.com/kolyamkl/sota-sdk-python"
Repository = "https://github.com/kolyamkl/sota-sdk-python"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
sota-agent = "sota_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sota_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
