[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sota-sdk"
version = "0.2.0"
description = "SOTA Agent SDK - Build AI agents for the SOTA marketplace"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "supabase>=2.24.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
sota-agent = "sota_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sota_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
